--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
-
+		embedded_svc.settings.extraPrechatFormDetails = [{
+                                                      "label":"First Name",
+                                                      "transcriptFields": ["First_Name__c"]
+                                                      },{
+                                                      "label":"Last Name",
+                                                      "transcriptFields": ["Last_Name__c"]
+                                                      }
+        	];
 		embedded_svc.init(
 			'https://rakespatni-dev-ed.my.salesforce.com',
 			'https://starhunter--123--developer-edition.ap5.force.com/starhunter',
