--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+		document.getElementsByClassName("FirstName")[0].value='DynamicFirstNameValue';
+		document.getElementsByClassName("FirstName")[0].value='DynamicLstNameValue';
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"]
