--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+		if(document.getElementsByClassName("FirstName")!=null){
 		document.getElementsByClassName("FirstName")[0].value='DynamicFirstNameValue';
 		document.getElementsByClassName("FirstName")[0].value='DynamicLstNameValue';
+		}
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"]
