--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+		console.log(document.getElementsByClassName("FirstName"));
+		console.log(document.getElementsByClassName("FirstName")[0]);
 		if(document.getElementsByClassName("FirstName")!=null){
-		document.getElementsByClassName("FirstName")[0].value='DynamicFirstNameValue';
-		document.getElementsByClassName("FirstName")[0].value='DynamicLstNameValue';
+		//document.getElementsByClassName("FirstName")[0].value='DynamicFirstNameValue';
+		//document.getElementsByClassName("FirstName")[0].value='DynamicLstNameValue';
 		}
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
