--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 		console.log(document.getElementsByClassName("FirstName"));
 		console.log(document.getElementsByClassName("FirstName")[0]);
-		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+    FirstName: “John”,
+    LastName: “Doe”,
+    Email: “john.doe@salesforce.com”,
+    Subject: “Hello”
+};
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"]
