--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
 		console.log(document.getElementsByClassName("FirstName")[0]);
 		embedded_svc.settings.prepopulatedPrechatFields = {
     FirstName: “John”,
-    LastName: “Doe”,
-    Email: “john.doe@salesforce.com”,
-    Subject: “Hello”
-};
+    LastName: “Doe”};
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"]
