--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 		console.log(document.getElementsByClassName("FirstName"));
 		console.log(document.getElementsByClassName("FirstName")[0]);
 		embedded_svc.settings.prepopulatedPrechatFields = {
-    FirstName: "John",
-    LastName: "Doe"};
+    					FirstName: 'John',
+    					LastName: 'Doe'
+		};
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"]
