--- a/index.html
+++ b/index.html
@@ -35,16 +35,20 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 		console.log(document.getElementsByClassName("FirstName"));
 		console.log(document.getElementsByClassName("FirstName")[0]);
-		embedded_svc.settings.prepopulatedPrechatFields = {
+		/*embedded_svc.settings.prepopulatedPrechatFields = {
     					FirstName: 'John',
     					LastName: 'Doe'
 		};
+		*/
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
-                                                      "transcriptFields": ["First_Name__c"]
+                                                      "transcriptFields": ["First_Name__c"],
+							"value":"RakeshP"
+			
                                                       },{
                                                       "label":"Last Name",
-                                                      "transcriptFields": ["Last_Name__c"]
+                                                      "transcriptFields": ["Last_Name__c"],
+							      "value":"RP"
                                                       }
         	];
 		embedded_svc.init(
