--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"],
-							"value":"RakeshP"
+							"value":'RakeshP'
 			
                                                       },{
                                                       "label":"Last Name",
                                                       "transcriptFields": ["Last_Name__c"],
-							      "value":"RP"
+							      "value":'RP'
                                                       }
         	];
 		embedded_svc.init(
