--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
+		varFName = 'LNAME123';
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
@@ -43,7 +44,7 @@
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                       "label":"First Name",
                                                       "transcriptFields": ["First_Name__c"],
-							"value":'RakeshP'
+							"value": varFName
 			
                                                       },{
                                                       "label":"Last Name",
