--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ http://www.tooplate.com/view/2056-simple-life
 <script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
 <script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
 <script type="text/javascript">
-$(document).ready(function () {
-$.localScroll();
+jQuery(document).ready(function () {
+jQuery.localScroll();
 });
 </script> 
 </head>
