--- a/index.html
+++ b/index.html
@@ -1,97 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Life by Free Website Templates</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<!--
-Template 2056 simple life 
-http://www.tooplate.com/view/2056-simple-life
--->
-
-</head>
-
-<style type='text/css'>
-    .embeddedServiceHelpButton .helpButton .uiButton {
-        background-color: #005290;
-        font-family: "Arial", sans-serif;
-    }
-    .embeddedServiceHelpButton .helpButton .uiButton:focus {
-        outline: 1px solid #005290;
-    }
+  <body></body>
+<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/SalesforceEmbeddedService.min.js' ></script>
+<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.js' ></script>
+<link rel="stylesheet"  type="text/css" href="https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.css"/>
 
 
-	
-	
-	.chasitorControls .chasitorText{display:none;}
-.embeddedServiceLiveAgentStateChatInputFooter .chasitorControls{margin: 0px;}
-.embeddedServiceLiveAgentStateChatInputFooter.dynamicResizeTextOneRow{min-height:0px; height:5px;}
-
-</style>
-
-<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
-<script type='text/javascript'>
-    var initESW = function(gslbBaseURL) {
-        embedded_svc.settings.displayHelpButton = true; //Or false
-        embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-
-        //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-        //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-        //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-        //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-        // Settings for Chat
-        //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-            // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-            // Returns a valid button ID.
-        //};
-        //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-        //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-        //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
-        embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-        embedded_svc.settings.entryFeature = 'LiveAgent';
-
-        embedded_svc.init(
-            'https://pfizerpatientservices--helpdesk.my.salesforce.com',
-            'https://helpdesk-testbot.cs27.force.com/liveAgentSetupFlow',
-            gslbBaseURL,
-            '00D22000000DPhW',
-            'Test_IBRANCE_group',
-            {
-                baseLiveAgentContentURL: 'https://c.la1-c1cs-ph2.salesforceliveagent.com/content',
-                deploymentId: '572220000008PQP',
-                buttonId: '573220000008ONZ',
-                baseLiveAgentURL: 'https://d.la1-c1cs-ph2.salesforceliveagent.com/chat',
-                eswLiveAgentDevName: 'Test_IBRANCE_group',
-                isOfflineSupportEnabled: false
-            }
-        );
-	     embedded_svc.addEventHandler("onChatEndedByChasitor", function(data) {
-    	var matches = document.getElementsByClassName("minimised");
-		for (var i=0; i<matches.length; i++) {
-		     console.log("onChatEndedByChasitor event was fired.  liveAgentSessionKey was ");
-			matches[i].src = 'images/chatlogo1.png';
-		}
-		});
-    };
-
-    if (!window.embedded_svc) {
-        var s = document.createElement('script');
-        s.setAttribute('src', 'https://pfizerpatientservices--helpdesk.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-        s.onload = function() {
-            initESW(null);
-        };
-        document.body.appendChild(s);
-    } else {
-        initESW('https://service.force.com');
-    }
-</script>
-
-
-</body>
 </html>
- 
