--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   
-<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/SalesforceEmbeddedService.min.js' defer></script>
-<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.js' defer></script>
+<body>This holds the body of the page</body>
+  
+<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/SalesforceEmbeddedService.min.js' ></script>
+<script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.js' ></script>
 <link rel="stylesheet"  type="text/css" href="https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.css"/>
 
-<body>Rakesh Patni</body>
 </html>
