--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
   
-<body>This holds the body of the page</body>
+<body>This holds the boddyy of the page</body>
   
 <script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/SalesforceEmbeddedService.min.js' ></script>
 <script type='text/javascript' src='https://ias-staging.digitalpfizer.com/EinsteinBotIntegrationV1/Dev/Ibrance/IbranceEinsteinBot.min.js' ></script>
