--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<html>test123</html>
+<html>
+  <style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #005290;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #005290;
+	}
+    .embeddedServiceLiveAgentStateChat .messageArea.smoothScroll{
+	overflow-y:scroll;
+}
+</style>
+  <body>test</body>
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script type='text/javascript'>
+	var initESW = function(gslbBaseURL) {
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
+		embedded_svc.settings.extraPrechatFormDetails = [{
+                                                          "label":"First Name",
+                                                          "transcriptFields": ["DBot__First_Name__c"]
+                                                          },{
+                                                          "label":"Last Name",
+                                                          "transcriptFields": ["DBot__Last_Name__c"]
+                                                          },{
+                                                      "label":"Email",
+                                                      "transcriptFields": ["DBot__Email__c"]
+                                                      }];
+		embedded_svc.init(
+			'https://vassistpackage-dev-ed.my.salesforce.com',
+			'https://vassistpackage-developer-edition.na111.force.com/DbotDemoSite',
+			gslbBaseURL,
+			'00D3h000003UvAI',
+			'DBot__FSI',
+			{
+				baseLiveAgentContentURL: 'https://c.la4-c2-ph2.salesforceliveagent.com/content',
+				deploymentId: '5723h000000DBJu',
+				buttonId: '5733h000000ksJJ',
+				baseLiveAgentURL: 'https://d.la4-c2-ph2.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'DBot__FSI',
+				isOfflineSupportEnabled: false
+			}
+		);
+	};
+
+	if (!window.embedded_svc) {
+		var s = document.createElement('script');
+		s.setAttribute('src', 'https://vassistpackage-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.onload = function() {
+			initESW(null);
+		};
+		document.body.appendChild(s);
+	} else {
+		initESW('https://service.force.com');
+	}
+    window.addEventListener("message", receiveMessage, false);
+function receiveMessage(event) {
+    var payload = event.data;
+    if(payload && payload.type === "chasitor.sendMessage") {
+        embedded_svc.postMessage("chasitor.sendMessage", payload.message);
+    }
+};
+</script>
+</html>
