--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 		embedded_svc.settings.extraPrechatFormDetails = [{
                                                           "label":"First Name",
-                                                          "transcriptFields": ["DBot__First_Name__c"]
+                                                          "transcriptFields": ["DBot__First_Name__c"],
+							"value":"DbtUsr"
                                                           },{
                                                           "label":"Last Name",
                                                           "transcriptFields": ["DBot__Last_Name__c"]
