--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	 <link rel="stylesheet" href="https://einstein-cdn-dev.pfizer.com/einstein-sdk/ritle/style/ritleEinsteinBot.css"/>-->
-	 <script>
+	 <script type="text/javascript">
 	 var initESW = function(gslbBaseURL) {
         embedded_svc.settings.displayHelpButton = false; //Or false
         embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US 1'
